<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mpardalm.mi_agenda.AddContactActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/nombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombreContacto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/telefonoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telefonoUsuario"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/saveContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveContactButton" />

        <Button
            android:id="@+id/volverButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/volverButton" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
